# Source2Schema

./: CMakeLists.txt  README.md
cmake/: global-flags.cmake  msvc-flags.cmake
headers/: Interface.h  SchemaSystem.h
src/: SchemaSystem.cpp
